Alertas, background, keyboard, validar email

--- a/EjercicioUno/app/src/main/res/layout/activity_info_user.xml
+++ b/EjercicioUno/app/src/main/res/layout/activity_info_user.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InfoUserActivity">
+    tools:context=".InfoUserActivity"
+        android:background="@drawable/background"
+        >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+            android:layout_marginTop="50dp"
         >
         <TextView
             android:id="@+id/tvName"
