--- a/EjercicioUno/app/src/main/res/layout/activity_main.xml
+++ b/EjercicioUno/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
     <ScrollView
@@ -33,12 +34,13 @@
                 android:orientation="horizontal"
                 android:weightSum="1"
                 android:padding="10dp"
+                    android:layout_marginTop="20dp"
                 >
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.3"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:fontFamily="@font/barlow_regular"
                     android:text="@string/Nombre"
                     android:gravity="center_vertical"
@@ -71,7 +73,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.3"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:fontFamily="@font/barlow_regular"
                     android:text="@string/fecha_de_nacimiento"
                     android:gravity="center_vertical"
@@ -103,7 +105,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.3"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:fontFamily="@font/barlow_regular"
                     android:text="@string/numero_de_cuenta"
                     android:gravity="center_vertical"
@@ -136,7 +138,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.3"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/textSizeTextViewN"
                     android:fontFamily="@font/barlow_regular"
                     android:text="@string/correo"
@@ -159,7 +161,7 @@
 
             </LinearLayout>
 
-            <Button
+            <TextView
                 android:id="@+id/btnVerify"
                 android:layout_width="150dp"
                 android:layout_height="45dp"
@@ -179,6 +181,35 @@
 
 
 
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:id="@+id/mprogress"
+            >
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/black"
+            android:alpha="0.5"
+            />
+
+        <com.github.ybq.android.spinkit.SpinKitView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/spin_kit"
+                style="@style/SpinKitView.Large.CubeGrid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:SpinKit_Color="@color/blue_gt"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
