--- a/EjercicioUno/app/src/main/res/layout/activity_info_user.xml
+++ b/EjercicioUno/app/src/main/res/layout/activity_info_user.xml
@@ -11,9 +11,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-            android:layout_marginTop="50dp"
-        >
+        android:orientation="vertical">
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:text="@string/signes"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:background="@color/blue_gt"
+                android:padding="20dp"
+                />
+
+
         <TextView
             android:id="@+id/tvName"
             android:layout_width="match_parent"
@@ -25,7 +37,8 @@
             android:layout_margin="10dp"
             android:background="@drawable/background_edit_unselected"
             android:backgroundTint="@color/gray_light_gt"
-            />
+            android:layout_marginTop="50dp"
+                />
 
         <TextView
             android:id="@+id/tvDate"
